--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -12,8 +12,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank">30多国法轮功学员聚伦敦 在著名景点洪法</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48642438366_5ccb244540_o1-150x120.jpg" align ="left"></a>“我曾经是一位太极拳教练，2012年我到了中国的武当山，因为我对气功非常好奇，中国一位中医大夫告诉我，在中国有一种气功是被禁止的。我当时听到这个消息非常吃惊，因此开始在网络上查询关于法轮大法的消息，当看到法轮大法的书时，我立刻就明白了：就是我要找的！我终于找到了法轮大法！”戈杰?查代（Gorger Cadez）说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/24/n11542396.md#1" target="_blank">每日三退声明精选（2019/09/23）</a><br></h3>本人在大陆长大，自从学会翻墙和去过国外之后，看到了国外和大陆最大的不同就是没有共产独裁的社会其实才是最好的。我当初被中共这些人欺骗，现在一想起来就火大。包括马云等所谓的有钱人，就算是多有钱也保不住他们。有幸看到三退的机会，决定在这里退出中共的党团队，不想被中共牵连。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/23/n11539939.md#1" target="_blank">每日三退声明精选（2019/09/22）</a><br></h3>作为一个有良知的人，在学生时期内心的迷蒙和资讯的封闭让我不知道这是怎样的一个组织，在老师的强烈要求下加入共青团(不加入共青团会被老师孤立)，然而在学校中，政治和学习挂钩这么深真的是万分不能让人接受。这一事实令我痛苦不已，从入团那天起就对自己产生了深深的质疑，在对于加入与否这件事上不能自主选择，那么加入真的是一件对的事吗？从那个时候起就对政治制度有了一些侧面的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/21/n11536505.md#1" target="_blank">每日三退声明精选（2019/09/20）</a><br></h3>恶党又在借维稳来迫害民众，而真正的不稳定因素都是恶党自己搞出来的，反过来又借维稳来大肆欺压掠夺民众，真正的动乱之源就是中共，中共才是真正的邪教。中共气数已尽，作恶到头终有报。退出我们所加入的邪党组织保平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/20/n11534046.md#1" target="_blank">每日三退声明精选（2019/09/19）</a><br></h3>作为一名大学生，看到中共首都各高校都为赤匪统治中国70周年绞尽脑汁，大搞面子工程，为六四三十周年的今日深感痛心！今日的大学对不起当初流血的师生！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 11:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/19/n11531343.md#1" target="_blank">每日三退声明精选（2019/09/18）</a><br></h3>作为华为员工，我糊里糊涂加入了中国共产党。我看到华为专门监控老百姓，太坏了。现声明退出邪恶的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 11:21 AM							</td></tr>
@@ -40,5 +39,6 @@
 中国共产党所作所为都是在维稳，在反华，去中国化。 
 消.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月21日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/20/n11464667.md#1" target="_blank">每日三退声明精选（2019/08/19）</a><br></h3>在中共这个国度是没我真正的自由的，他们面对民众表面一套，背后另一套，没有证据，他们就会造证据，大力宣扬黑化对象，看到他们表皮光鲜，却不知背后黑暗无边。在内地只能等待真正的光明到来，虽然在做着微不足道的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 11:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/16/n11456698.md#1" target="_blank">每日三退声明精选（2019/08/15）</a><br></h3>年轻的时候因为在大陆的关系被中共所蒙骗。后来自己上高中的时候和出来留学的时候分别接触了翻墙和大纪元。在初中的时候发生了一些事情，让我觉得对中共十分失望。后来看到了一些历史真相和九评以及终极目的两书后，更加明白中共和共产邪说是不可能改变的，再加上最近香港发生的中共对港镇压，于是对中共彻底绝望。今天刚好在国外，决定趁这个机会，退出中共党团队，不再被这个邪恶带到沟.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 11:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_4.htm">http://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
