--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank">【直播预告】新唐人电视台2020跨年缤纷夜</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg" align ="left"></a>新唐人电视台特别企划《2020跨年缤纷夜》直播节目，在2019年的最后一个夜晚，陪您盘点年度大事件，欢欢喜喜迎新年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11753937.md#1" target="_blank">美中科技战 2020年聚焦五大关键问题</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11753937.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1301212350302534-600x400-150x120.jpg" align ="left"></a>2020年，美中冲突仍将是全球关注焦点，除了有关中共结构改革的第二阶段谈判，更令人注目的是进入白热化阶段的科技战。专家预测，明年美中科技战聚焦五大关键事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753833.md#1" target="_blank">两大因素 韩国央行预计大陆明年GDP增长破6%</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/economy-construction-tian-jing-GettyImages-474029480-600x400-150x120.jpg" align ="left"></a>韩国央行12月29日表示，大陆经济明年会延续今年疲软的趋势，因国内需求和投资疲软，明年GDP增幅难以达到6%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753606.md#1" target="_blank">白宫：若朝鲜试射远程导弹 美将采取行动</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LO3OB-150x120.jpg" align ="left"></a>白宫国家安全顾问罗伯特?奥布赖恩（Robert O’Brien）周日（12月29日）表示，如果朝鲜试射远程导弹或核导弹，美国将感到非常失望，并采取适当行动。他还表示，金正恩可能已经重新考虑了他的“圣诞礼物”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 10:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753463.md#1" target="_blank">台大选辩论 聚焦一国两制、香港、反渗透法</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8d1b02a8674858ec0ef713c1be3f5566-600x400-1-150x120.jpg" align ="left"></a>2020年台湾总统大选唯一一场电视辩论会29日下午登场，三位候选人主要聚焦：台湾主权、抵制中共的“一国两制，九二共识”，香港问题以及台湾的《反渗透法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 9:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753546.md#1" target="_blank">重庆中学生在学校坠亡 家人被禁见遗体</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-20-150x120.jpg" align ="left"></a>重庆市巫溪中学高二学生王东平在学校期间，疑遭老师羞辱后坠楼身亡，然而其家人至今无法见到死者尸体，并被警察带走，爆光视频也在微博上被接连删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748971.md#1" target="_blank">北京女子劳教所前所长李继荣的罪行</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748971.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1068163599_fiaOd0-150x120.jpg" align ="left"></a>原北京女子劳教所所长李继荣积极参与迫害法轮功，对法轮功学员实施残酷的精神和洗脑迫害，罪行累累。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:21 AM							</td></tr>
@@ -20,12 +24,9 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752375.md#1" target="_blank">大陆干旱持续数月 江西近33万人饮水困难</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg" align ="left"></a>数月以来，中国大陆多省持续严重干旱情况。当前，江西南昌市饮用水水源地“幸福水库”的河床裸露干裂。全省有近33万人饮水困难。赣江南昌段近日将出现更低的水位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752635.md#1" target="_blank">程晓容：台海两岸关系的走向由谁主导？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908100551522378-150x120.jpg" align ="left"></a>现在，中共头痛万分：香港说“不”，台湾说“不”，暴政怎得天下归心？所以，只要中共当政，什么样的“统一”都不会成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744836.md#1" target="_blank">【2019盘点】中国十大网络热点新闻</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-600x400-2-150x120.jpg" align ="left"></a>2019年已接近尾声，中国大陆网络热闹非凡。虽然中共一惯地封杀和打压网络言论自由，但中国民众仍通过微博、论坛等发表自己的意见，他们表达了对中共专制政权的唾弃，曝光了被中共掩盖的部分真相。为此，大纪元为您回顾2019年的十大网络热点事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752280.md#1" target="_blank">大陆银行理财收益降至3.97% 连跌21个月</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752280.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a9317ab93314058a4688a54777701778-150x120.jpg" align ="left"></a>大陆11月份的财富管理收益指数显示，今年11月份，银行理财平均收益较10月份下滑1BP（1BP=0.01个百分点）至3.97%，这已经是连续21个月出现环比下跌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:02 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank">港警官吐露心声：被迫处于冲突中心 支持调查</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hong-kong-poster-anti-communist-1200x800-600x400-1-1-150x120.jpg" align ="left"></a>圣诞节期间，香港再次爆发警民冲突，上百人被逮捕，引起争议的港警处于冲突中心。德广联驻记者在香港采访了一名警官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>上周，圣诞求救信披露上海青浦监狱强制外国囚犯劳动恶行。数名名曾被关在该监狱的受害者揭发更多恐怖细节，其中一名男子是求救信主笔者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank">黄之锋入选金融时报全球50大重要人物</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wong1-150x120.jpg" align ="left"></a>英国《金融时报》日前公布了2010年以来过去10年影响全球的50位重要人物名单，其中香港众志秘书长黄之锋以“香港政治活动人士”的身份入选，成为唯一上榜的香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751906.md#1" target="_blank">台总统辩论29日14点登场 蔡韩宋直接对决</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751906.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e0efaae6822ba9c1df1384a9ad1ea6d0-150x120.jpg" align ="left"></a>2020总统唯一一场由公视举办的总统辩论会29日下午2时登场，总统辩论会协商代表也是民进党立法院党团书记长李俊俋受访表示，政见会与辩论会差异性不大，准备的方式一样，着重于3年的政绩透过辩论会向人民报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 8:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751793.md#1" target="_blank">美癌症中心高层人事突变 曝光中共何种野心</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751793.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Mckinley-Exterior-640x367-150x120.jpg" align ="left"></a>上周，“H·李·莫菲特癌症中心和研究所”领导层的突然变动震惊了坦帕湾医学界，并迅速促使州议会的议员采取了不寻常的举措开展调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 8:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754339.md#1" target="_blank">重庆涪陵一居民楼着火 6人死亡</a><br></h3>2019年12月30日早上，重庆市涪陵区一居民楼着火，导致6人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754205.md#1" target="_blank">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br></h3>12月29日下午，辽宁省沈阳市发生一起交通事故，一辆大巴车与限高杆相撞，导致车顶脱落，波及旁边的小轿车，致小轿车内一人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753030.md#1" target="_blank">山西国企煤矿集团子公司发生事故 5死1伤</a><br></h3>12月30日，山西同煤集团官网、党委宣传部消息，12月29日凌晨零时，同煤集团地煤公司焦煤矿305煤眼，发生一起流煤眼歘煤事故。事发时6人被困，经救援，5人抢救无效死亡，1人送医后生命体征平稳。事故原因仍在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752311.md#1" target="_blank">【翻墙必看】内蒙古公安警官开枪打死两官</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.内蒙古公安警官枪杀两副局长 当局封口
@@ -36,6 +37,5 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752699.md#1" target="_blank">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br></h3>北京市朝阳区民航总医院女医生杨文24日遭病人家属孙文斌用刀割喉死亡。陆媒近日披露其被杀的细节：孙用刀刺中她颈部后，再多次“拉锯式”切割，将她的颈部肌肉及气管锯断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752654.md#1" target="_blank">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br></h3>12月24日下午1点20分许，湖南长沙生态动物园大象驯养场内，一头大象突然发狂，将一名驯兽员卜某踩死。动物园目前已将该大象隔离，有动物专家怀疑大象是发情所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752431.md#1" target="_blank">杭州一合资化工厂仓库着火</a><br></h3>12月29日早上，杭州钱塘新区一化工厂仓库着火。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752467.md#1" target="_blank">充电时手机爆炸 浙江男子被烧致面目全非</a><br></h3>近日，浙江海宁市民王先生半躺在床上休息时，拿起正放在床头柜上充电的手机，就在他拿起手机的一刹那，手机突然发生爆炸，致使他身上多处被烧伤，脸部几乎面目全非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
